# todoer

./: .env.example  .gitignore  README.md  pyproject.toml  run_backend.py  start.sh  start_backend.sh
agent/: agent.py  api_client.py  mcp_adapter.py  mcp_client.py  utils.py
backend/: README.md  auth.py  config.py  database.py  main.py  schemas.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatWindow.tsx  LoginForm.tsx  TodoList.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts
mcp_server/: README.md  __init__.py  server.py
